@@ -3,7 +3,7 @@
  * HISTORY.C - Nagios History CGI
  *
  * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-09-2007
+ * Last Modified: 05-30-2007
  *
  * This CGI program will display the history for the specified host.
  * If no host is specified, the history for all hosts will be displayed.
@@ -919,7 +919,7 @@ void get_history(void){
 
 				if(display_frills==TRUE)
 					printf("<img align='left' src='%s%s' alt='%s' title='%s'>",url_images_path,image,image_alt,image_alt);
-				printf("[%s] %s<br clear='all'>\n",date_time,html_encode(temp_buffer));
+				printf("[%s] %s<br clear='all'>\n",date_time,html_encode(temp_buffer,FALSE));
 				found_line=TRUE;
 			        }
 		        }
