@@ -2,7 +2,7 @@
  *
  * CGIUTILS.H - Header file for common CGI functions
  * Copyright (c) 1999-2007  Ethan Galstad (nagios@nagios.org)
- * Last Modified: 05-09-2007
+ * Last Modified: 05-30-2007
  *
  * License:
  * 
@@ -469,7 +469,7 @@ char * my_strsep (char **, const char *);
 int my_free(void **);                                   	/* my wrapper for free() */
 
 char * url_encode(char *);		        		/* encodes a string in proper URL format */
-char * html_encode(char *);					/* encodes a string in HTML format (for what the user sees) */
+char * html_encode(char *,int);					/* encodes a string in HTML format (for what the user sees) */
 
 void get_time_breakdown(unsigned long,int *,int *,int *,int *);	/* given total seconds, get days, hours, minutes, seconds */
 
